--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ body {
   margin-right: 2.5rem;
 }
 
+.nav-menu .menu {
+  overflow: hidden;
+  display: block;
+}
+
 .nav-menu .btn-use {
   border: 0;
   border-radius: 30px;
@@ -62,6 +67,10 @@ body {
   padding: 12px;
   background-color: #EC5250;
   color: #fff;
+}
+
+.icon {
+  display: none;
 }
 
 .header {
@@ -123,5 +132,21 @@ body {
   height: 100px;
   text-align: center;
   display: block;
+}
+
+.hamburger {
+  background-image: url(../assets/icono-menu.png);
+  background-size: cover;
+  height: 20px;
+  width: 20px;
+}
+
+@media only screen and (max-width: 721px) {
+  .link {
+    display: none;
+  }
+  .icon {
+    display: block;
+  }
 }
 /*# sourceMappingURL=style.css.map */
