--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,7 @@ $color-secundary-red: #CE5D5B;
 $btn-red: #EC5250;
 $color-white : #fff;
 $color-link: #686868;
-
+  
 *{
     margin: 0;
     padding: 0;
@@ -49,7 +49,11 @@ body{
         font-size: 20px;
         margin-right: 2.5rem;
     }
-
+    .menu{
+        overflow: hidden;
+        display: block;
+    }
+    
     .btn-use{
         border: 0;
         border-radius: 30px;
@@ -60,7 +64,9 @@ body{
      
     }
 }
-
+.icon{
+    display: none;
+}
 .header{
     position: relative;
     align-items: center;
@@ -115,3 +121,25 @@ body{
     text-align: center;
     display: block;
 }
+
+
+.hamburger{
+    
+    background-image: url(../assets/icono-menu.png);
+    background-size: cover;
+    height: 20px;
+    width: 20px;
+}
+
+
+@media only screen and (max-width: 721px) {
+    .link{
+        display: none;
+        
+    }
+    .icon{
+      display: block;
+  }
+}
+
+
