se modificaron estilos en la seccion-1

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,7 @@ $color-primary-red: #FC4850;
 $color-secundary-red: #CE5D5B;
 $btn-red: #EC5250;
 $color-white : #fff;
-$color-link: #686868;
+$color-grey: #686868;
   
 *{
     margin: 0;
@@ -13,72 +13,89 @@ body{
     font-size: 24px;
     font-family: 'K2D','serif';
     letter-spacing: 0.1em;
+    display: flex;
+    flex-direction: column;
 }
 
-.nav-menu{
-    width: 100%;
-    height: 6rem;
-    background-color: $color-white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   
-    .brand {
-     
+.header{
+    .nav-menu{
+        display: flex;
+        flex-direction: row;
         align-items: center;
-        padding: 30px;
-        width: 400px;
-        
-        .img-pomodoro-brand{
-            margin-right: 20px;
-            width: 40px;
-            height: 40px;
+        width: 100%;
+        justify-content: space-between;
+        color: $color-white;
+    
+        .brand {
+            align-items: center;
+            padding: 30px;
+            width: 400px;
+            
+            .img-pomodoro-brand{
+                margin-right: 20px;
+                width: 40px;
+                height: 40px;
+            }
+            
+            .title-pomodoro-brand{
+                position: absolute;
+                display: inline;
+                color: $color-secundary-red;
+                font-size: 36px;
+            }
+        }
+        .menu a, button{
+            font-weight: 600;
+            text-decoration: none;
+            color: $color-grey;
+            font-size: 20px;
+            margin-right: 2.5rem;
+        }
+        .menu{
+            overflow: hidden;
+            display: block;
         }
         
-        .title-pomodoro-brand{
-            position: absolute;
-            display: inline;
-            color: $color-secundary-red;
-            font-size: 36px;
+        .btn-use{
+            border: 0;
+            border-radius: 30px;
+            width: 200px;
+            padding: 12px;
+            background-color: $btn-red;
+            color: $color-white
+         
         }
     }
-    .menu a, button{
-        font-weight: 600;
-        text-decoration: none;
-        color: $color-link;
-        font-size: 20px;
-        margin-right: 2.5rem;
+}
+
+
+.section-1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 500px;
+    color: $color-white;
+    background-color: $color-grey;
+
+    .title{
+        position: absolute;
+        float: left;
+        left: 5%;
     }
-    .menu{
-        overflow: hidden;
-        display: block;
+
+    .img-pomodoro{
+        position: absolute;
+        float: left;
+        left: 70%;
+        width: 268.07px;
+        height: 275.41px;
     }
     
-    .btn-use{
-        border: 0;
-        border-radius: 30px;
-        width: 200px;
-        padding: 12px;
-        background-color: $btn-red;
-        color: $color-white
-     
-    }
 }
 .icon{
     display: none;
 }
-.header{
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    color: $color-white;
-    background-color: #686868;
-    .title-technique-section{
-        position: relative;
-      
-    }
-}
+
 
 .best-technique-section{
     background-color: $color-white;
@@ -99,9 +116,8 @@ body{
 }
 
 .easy-section{
-
     height: 500px;
-    background-color: $color-link;
+    background-color: $color-grey;
     text-align: center;
 }
 
@@ -122,9 +138,7 @@ body{
     display: block;
 }
 
-
 .hamburger{
-    
     background-image: url(../assets/icono-menu.png);
     background-size: cover;
     height: 20px;
@@ -135,11 +149,35 @@ body{
 @media only screen and (max-width: 721px) {
     .link{
         display: none;
-        
     }
+
     .icon{
       display: block;
+    }
+  
+  .section-1{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 400px;
+      text-align: center;
+      width: 100%;
+
+    .img-pomodoro{
+        left: auto;
+        position: relative;
+        width: 187.07px;
+        height: 189.11px;
+      }
+      .title{
+        left: auto;
+        position: relative;
+        width: 100%;
+      }
+     
   }
+  
 }
 
 
