--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,34 @@ body {
   font-size: 24px;
   font-family: 'K2D','serif';
   letter-spacing: 0.1em;
-}
-
-.nav-menu {
-  width: 100%;
-  height: 6rem;
-  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header .nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: #fff;
 }
 
-.nav-menu .brand {
+.header .nav-menu .brand {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -34,20 +44,20 @@ body {
   width: 400px;
 }
 
-.nav-menu .brand .img-pomodoro-brand {
+.header .nav-menu .brand .img-pomodoro-brand {
   margin-right: 20px;
   width: 40px;
   height: 40px;
 }
 
-.nav-menu .brand .title-pomodoro-brand {
+.header .nav-menu .brand .title-pomodoro-brand {
   position: absolute;
   display: inline;
   color: #CE5D5B;
   font-size: 36px;
 }
 
-.nav-menu .menu a, .nav-menu button {
+.header .nav-menu .menu a, .header .nav-menu button {
   font-weight: 600;
   text-decoration: none;
   color: #686868;
@@ -55,12 +65,12 @@ body {
   margin-right: 2.5rem;
 }
 
-.nav-menu .menu {
+.header .nav-menu .menu {
   overflow: hidden;
   display: block;
 }
 
-.nav-menu .btn-use {
+.header .nav-menu .btn-use {
   border: 0;
   border-radius: 30px;
   width: 200px;
@@ -69,27 +79,38 @@ body {
   color: #fff;
 }
 
-.icon {
-  display: none;
-}
-
-.header {
-  position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.section-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 500px;
   color: #fff;
   background-color: #686868;
 }
 
-.header .title-technique-section {
-  position: relative;
+.section-1 .title {
+  position: absolute;
+  float: left;
+  left: 5%;
+}
+
+.section-1 .img-pomodoro {
+  position: absolute;
+  float: left;
+  left: 70%;
+  width: 268.07px;
+  height: 275.41px;
+}
+
+.icon {
+  display: none;
 }
 
 .best-technique-section {
@@ -147,6 +168,35 @@ body {
   }
   .icon {
     display: block;
+  }
+  .section-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 400px;
+    text-align: center;
+    width: 100%;
+  }
+  .section-1 .img-pomodoro {
+    left: auto;
+    position: relative;
+    width: 187.07px;
+    height: 189.11px;
+  }
+  .section-1 .title {
+    left: auto;
+    position: relative;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
